--- a/core/core.csproj
+++ b/core/core.csproj
@@ -1,9 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net5</TargetFramework>
-    <RootNamespace>cppcx.CLI</RootNamespace>
+    <RootNamespace>cppcx.Core</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
